--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "A restapi backend for the tutoring app. restful api",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "https://www/github.com/TutoringApp"
+  },
+  "engines": {
+    "node": "12.16.2"
   },
   "keywords": [
     "api",
